--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my-module",
+  "name": "nuxt-ipx-cache",
   "version": "1.0.0-beta.0",
   "description": "Cache ipx-optimized image to disk and save your cpu time!",
-  "repository": "your-org/my-module",
+  "repository": "manot40/nuxt-ipx-cache",
   "license": "MIT",
   "type": "module",
   "exports": {
@@ -34,6 +34,7 @@
     "@nuxt/kit": "^3.15.4"
   },
   "peerDependencies": {
+    "defu": "^6.1.4",
     "ipx": "3.x || 2.x"
   },
   "devDependencies": {
