--- a/playground/package.json
+++ b/playground/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "my-module-playground",
+  "name": "nuxt-ipx-cache-playground",
   "type": "module",
   "scripts": {
     "dev": "nuxi dev",
