--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-ipx-cache",
-  "version": "1.0.0-beta.0",
+  "version": "1.0.0",
   "description": "Cache ipx-optimized image to disk and save your cpu time!",
   "repository": "manot40/nuxt-ipx-cache",
   "license": "MIT",
