--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nuxt-ipx-cache",
+  "name": "nuxt-ipx-cache-nx",
   "version": "1.0.6",
   "description": "Cache ipx-optimized image to disk and save your cpu time!",
-  "repository": "manot40/nuxt-ipx-cache",
+  "repository": "chrissi2812/nuxt-ipx-cache-nx",
   "license": "MIT",
   "type": "module",
   "exports": {
