--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,6 @@
 name: Create Release
 on:
+  workflow_dispatch:
   push:
     # Sequence of patterns matched against refs/tags
     tags:
@@ -16,4 +17,4 @@ jobs:
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
-      - run: npx changelogen gh release --github-token ${{ secrets.GITHUB_TOKEN }}
+      - run: npx changelogen gh release --token ${{ secrets.GITHUB_TOKEN }}
