--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,4 +17,11 @@ jobs:
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
+      - run: npm ci
       - run: npx changelogen gh release --token ${{ secrets.GITHUB_TOKEN }}
+      - run: npm run prepare
+      - run: npm run test
+      - run: npm run prepack
+      - run: npm publish --provenance --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
